--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,6 @@ hugoblox:
     tagline: CS Undergrad (DUT)
     description: I'm a junior CS student at Dalian University of Technology. I work on Vision-Language-Action (VLA) and robot manipulation, focusing on robustness and self-super
   theme:
-    custom_css: ["css/custom.css"]
     mode: system
     pack: default
     colors:
@@ -42,3 +41,6 @@ hugoblox:
       enable: true
   search:
     enable: true
+    # 营销与统计分析
+  a dmarketing:
+    google_analytics: "G-4QSM60EMWN"
